--- a/SimuladorSmail/src/GUI/Input.form
+++ b/SimuladorSmail/src/GUI/Input.form
@@ -478,6 +478,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField17">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="10"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JSeparator" name="jSeparator1">
     </Component>
